tweak pic size again

--- a/output.css
+++ b/output.css
@@ -999,8 +999,8 @@ video {
   max-width: 80rem;
 }
 
-.max-w-lg {
-  max-width: 32rem;
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .max-w-2xl {
@@ -2872,8 +2872,8 @@ video {
     height: 16rem;
   }
 
-  .sm\:max-w-lg {
-    max-width: 32rem;
+  .sm\:max-w-sm {
+    max-width: 24rem;
   }
 
   .sm\:grid-cols-2 {
@@ -2930,6 +2930,12 @@ video {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:max-w-lg {
+    max-width: 32rem;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:aspect-w-16 {
     position: relative;
@@ -2965,6 +2971,10 @@ video {
 
   .lg\:min-w-0 {
     min-width: 0px;
+  }
+
+  .lg\:max-w-xl {
+    max-width: 36rem;
   }
 
   .lg\:max-w-7xl {
